# jzon-rs

./: .gitignore  BENCHMARKS.md  BENCHMARK_REPORT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yml  ci.yml  publish-compat.yml  publish.yml
crates/jzon/: Cargo.toml  README.md
crates/jzon/benches/: bench_cmp.rs
crates/jzon/data/: mixed_2mb.json
crates/jzon/src/: de.rs  scanner.rs  ser.rs  simd.rs  simd_arch.rs
crates/jzon/tests/: integration.rs  json_spec.rs  large_data.rs  serde_compat.rs
crates/jzon_compat/: Cargo.toml  README.md
crates/jzon_derive/: Cargo.toml  README.md
crates/jzon_derive/src/: de.rs  ser.rs
crates/jzon_serde/: Cargo.toml  README.md
crates/jzon_serde/src/: lib.rs
crates/r_json/: Cargo.toml
crates/r_json/benches/: bench.rs  bench_cmp.rs
crates/r_json/src/: de.rs  error.rs  lib.rs  scanner.rs  ser.rs  simd.rs  stats.rs
crates/r_json/tests/: integration.rs
crates/r_json_compat/: Cargo.toml
crates/r_json_compat/src/: lib.rs
crates/r_json_derive/: Cargo.toml
crates/r_json_derive/src/: attrs.rs  de.rs  lib.rs  rename.rs  ser.rs  trie.rs
crates/r_json_serde/: Cargo.toml
