[workspace]
members = [
    "crates/jzon",
    "crates/jzon_derive",
    "crates/jzon_serde",
    "crates/jzon_compat",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Rajaniraiyn <rajaniraiyn@gmail.com>"]
license = "MIT"
repository = "https://github.com/Rajaniraiyn/jzon-rs"
homepage = "https://github.com/Rajaniraiyn/jzon-rs"
keywords = ["json", "serialization", "zero-copy", "simd", "serde"]
categories = ["encoding", "parsing"]
rust-version = "1.71"
