[package]
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Zero-copy JSON serialization with compile-time generated typed parsers"
name = "jzon-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "jzon"

[features]
default    = ["derive"]
derive     = ["dep:jzon_derive"]
simd       = []
unstable   = []
simd-intrinsics = ["simd"]
stats      = []
fast-float = ["dep:ryu", "dep:fast-float2"]
zmij-float-ser = ["dep:zmij"]

[dependencies]
jzon_derive = { package = "jzon-rs-derive", path = "../jzon_derive", version = "0.2", optional = true }
ryu         = { version = "1", optional = true }
fast-float2 = { version = "0.2", optional = true }
zmij = { version = "1", optional = true }

[dev-dependencies]
sonic-rs   = "0.3"
simd-json  = { version = "0.13", features = ["serde_impl"] }
ryu        = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
jzon_serde = { package = "jzon-rs-serde", path = "../jzon_serde" }
criterion  = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "bench_cmp"
harness = false

[[bench]]
name    = "bench_simd"
harness = false

[[test]]
name = "large_data"

[[test]]
name = "serde_compat"
