[package]
description = "Drop-in serde_json replacement powered by jzon (Cargo patch)"
name = "jzon_compat"
version.workspace = true
edition.workspace = true

[features]
default = ["fast-float"]
simd       = ["jzon_serde/simd"]
fast-float = ["jzon_serde/fast-float"]
unstable   = ["jzon_serde/unstable"]

[dependencies]
jzon_serde = { path = "../jzon_serde" }
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", package = "serde_json" }
