[package]
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Drop-in serde_json replacement powered by jzon (Cargo patch)"
name = "jzon-rs-compat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default    = ["fast-float"]
simd       = ["jzon_serde/simd"]
fast-float = ["jzon_serde/fast-float"]
unstable   = ["jzon_serde/unstable"]
stats      = ["jzon_serde/stats"]

[dependencies]
jzon_serde = { package = "jzon-rs-serde", path = "../jzon_serde", version = "0.2" }
serde      = { version = "1", default-features = false, features = ["std"] }
serde_json = { version = "1" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
