[package]
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Serde-compatible JSON engine backed by jzon's SIMD scanner"
name = "jzon-rs-serde"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default    = []
simd       = ["jzon/simd"]
fast-float = ["jzon/fast-float"]
unstable   = ["jzon/unstable"]
stats      = ["jzon/stats"]

[dependencies]
jzon  = { package = "jzon-rs", path = "../jzon", version = "0.2", default-features = false }
serde = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "jzon_serde"
