[package]
name = "r_json"
version.workspace = true
edition.workspace = true

[features]
default = []

# Enable SIMD-width scanning.  On stable: SWAR (8-byte u64 trick, safe, zero-dep).
# On nightly with `unstable`: std::simd portable SIMD (16/32/64 bytes safe).
simd = []

# Unlock nightly-only Rust features: std::simd portable SIMD (requires
# `feature(portable_simd)`), wider lane types (u8x32, u8x64), compiler
# intrinsics visible through the safe API, and experimental standard-library
# extensions.  Combine with `simd` for the full SIMD pipeline.
unstable = []

# Collect per-parse statistics: zero-copy borrows vs. heap allocations,
# bytes scanned, and field-dispatch cache hit/miss counts.
stats = []

# Use ryu for fast float-to-string conversion in the serializer,
# and fast-float2 for fast float parsing in the deserializer.
fast-float = ["dep:ryu", "dep:fast-float2"]

[dependencies]
r_json_derive = { path = "../r_json_derive" }
ryu = { version = "1", optional = true }
fast-float2 = { version = "0.2", optional = true }

[dev-dependencies]
sonic-rs    = "0.3"
simd-json   = { version = "0.13", features = ["serde_impl"] }
ryu         = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
criterion    = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "bench"
harness = false

[[bench]]
name    = "bench_cmp"
harness = false
