[package]
# This crate is named "r_json_compat" internally but is used as a serde_json
# drop-in replacement via Cargo's [patch.crates-io] mechanism.  See the
# workspace Cargo.toml for patch instructions.
name = "r_json_compat"
version.workspace = true
edition.workspace = true
description = "serde_json API-compatible replacement backed by r_json_serde SIMD engine"

[features]
default = ["fast-float"]
simd       = ["r_json_serde/simd"]
fast-float = ["r_json_serde/fast-float"]
unstable   = ["r_json_serde/unstable"]

[dependencies]
r_json_serde = { path = "../r_json_serde" }
serde        = { version = "1", features = ["derive"] }
# The real serde_json is needed for Value, Map, Number — re-exported as-is.
# We alias it to avoid the name conflicting with *this* crate in user code.
serde_json   = { version = "1", package = "serde_json" }
